--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -1,4 +1,4 @@
-<p>Appwrite Storage allows you to manage files in your project. You can use it to store images, videos, documents, and other files for your projects. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint, you can crop, resize, rotate, add borders and border radius and select the desired output format for your image.
+<p>Appwrite Storage allows you to manage files in your project. You can use it to store images, videos, documents, and other files for your projects. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint, you can crop, resize, rotate, add borders and border radius and select the desired output format for your image. The preview API also allows you to change your image's quality, format, or compression, including WebP support for maximum optimization of your network bandwidth.
 </p>
 
 <h2><a href="/docs/storage#bucket" id="bucket">Buckets</a></h2>
