update border radius

--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -1,4 +1,4 @@
-<p>Appwrite Storage allows you to manage files in your project. You can use it to store images, videos, documents, and other files for your projects. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint, you can crop, resize, rotate, add borders and border radius and select the desired output format for your image. The preview API also allows you to change your image's quality, format, or compression, including WebP support for maximum optimization of your network bandwidth.
+<p>Appwrite Storage allows you to manage files in your project. You can use it to store images, videos, documents, and other files for your projects. It provides APIs to upload, download, delete, and list files. Not only that Appwrite storage service provides APIs to manipulate images. Using the preview endpoint, you can crop, resize, rotate, add borders and border-radius and select the desired output format for your image. The preview API also allows you to change your image's quality, format, or compression, including WebP support for maximum optimization of your network bandwidth.
 </p>
 
 <h2><a href="/docs/storage#bucket" id="bucket">Buckets</a></h2>
@@ -187,10 +187,10 @@ func main() {
 
 <h2><a href="/docs/storage#imagePreview" id="imagePreview">Image Manipulation</a></h2>
 
-<p>Another great built-in feature of Appwrite is the image manipulation feature. With Appwrite storage's <a href="/docs/client/storage#storageGetFilePreview">preview endpoint</a> you can manipulate resolution, add borders and the border radius, add background color, set the opacity for the image, and get the image in the appropriate output format.
+<p>Another great built-in feature of Appwrite is the image manipulation feature. With Appwrite storage's <a href="/docs/client/storage#storageGetFilePreview">preview endpoint</a> you can manipulate resolution, add borders and the border-radius, add background color, set the opacity for the image, and get the image in the appropriate output format.
 </p>
 
-<p>This enables a wide range of possibilities! You can manipulate images resolution to display appropriately on responsive websites. You can also adjust the image border, background color, and border radius to match the theming of your application. You can do all that without caring about how the image was originally uploaded.
+<p>This enables a wide range of possibilities! You can manipulate images resolution to display appropriately on responsive websites. You can also adjust the image border, background color, and border-radius to match the theming of your application. You can do all that without caring about how the image was originally uploaded.
 </p>
 
 <p>Below you can find all the different parameters offered by the preview endpoint to manipulate the image.</p>
@@ -229,7 +229,7 @@ func main() {
         </tr>
         <tr>
             <td>borderRadius</td>
-            <td> set a border radius in pixels. Accepts an integer between 0-4000.</td>
+            <td> set a border-radius in pixels. Accepts an integer between 0-4000.</td>
         </tr>
         <tr>
             <td>opacity</td>
