--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -187,10 +187,10 @@ func main() {
 
 <h2><a href="/docs/storage#imagePreview" id="imagePreview">Image Manipulation</a></h2>
 
-<p>Another great built-in feature of Appwrite is the image manipulation feature. With Appwrite storage's <a href="/docs/client/storage#storageGetFilePreview">preview endpoint</a> you can manipulate resolution, add borders and the border-radius, add background color, set the opacity for the image, and get the image in the appropriate output format.
+<p>Another great built-in feature of Appwrite is the image manipulation feature. With Appwrite storage's <a href="/docs/client/storage#storageGetFilePreview">preview endpoint</a> you can manipulate resolution, add borders and the border-radius, add background-color, set the opacity for the image, and get the image in the appropriate output format.
 </p>
 
-<p>This enables a wide range of possibilities! You can manipulate images resolution to display appropriately on responsive websites. You can also adjust the image border, background color, and border-radius to match the theming of your application. You can do all that without caring about how the image was originally uploaded.
+<p>This enables a wide range of possibilities! You can manipulate images resolution to display appropriately on responsive websites. You can also adjust the image border, background-color, and border-radius to match the theming of your application. You can do all that without caring about how the image was originally uploaded.
 </p>
 
 <p>Below you can find all the different parameters offered by the preview endpoint to manipulate the image.</p>
@@ -225,7 +225,7 @@ func main() {
         </tr>
         <tr>
             <td>borderColor</td>
-            <td> set a border color for the output image. Accepts any valid Hex color value without the leading #.</td>
+            <td> set a border-color for the output image. Accepts any valid Hex color value without the leading #.</td>
         </tr>
         <tr>
             <td>borderRadius</td>
@@ -241,7 +241,7 @@ func main() {
         </tr>
         <tr>
             <td>background</td>
-            <td> set a background color. Accepts any valid Hex color value without the leading #. Only works with output format supporting alpha channel like png.</td>
+            <td> set a background-color. Accepts any valid Hex color value without the leading #. Only works with output format supporting alpha channel like png.</td>
         </tr>
         <tr>
             <td>output</td>
