--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -7,7 +7,7 @@
 
 <h3><a href="/docs/storage#createBucket" id="createBucket">Create Bucket</a></h3>
 
-<p>You can create your bucket from your Appwrite project's dashboard, using any of our server-side SDKs, or directly using our REST API authenticated using an API Key. To create a bucket from the dashboard, access your Storage from your project's left navigation panel. Click <b>Add Bucket</b> button and choose your bucket's name. You can also set a custom ID for your bucket instead of an auto-generated ID for convenience. This will create a new bucket and take you to its settings page, where you can configure various options for your bucket.
+<p>You can create your bucket from your Appwrite project's dashboard, using any of our server-side SDKs, or directly using our REST API authenticated using an API Key. To create a bucket from the Appwrite Console, access your Storage dashboard from your project's left navigation panel. Click <b>Add Bucket</b> button and choose your bucket's name. You can also set a custom ID for your bucket instead of an auto-generated ID for convenience. This will create a new bucket and take you to its settings page, where you can configure various options for your bucket.
 You can manage your buckets programmatically using one of Appwrite's Server SDKs or REST API paired with an API Key. You can manage files with both the Server and Client-side.</p>
 
 <p>You can manage your buckets programmatically using one of Appwrite's Server <a href="/docs/sdks#server">SDKs</a> or REST API paired with an API Key. You can manage files with both Server and Client side.</p>
@@ -16,11 +16,11 @@ You can manage your buckets programmatically using one of Appwrite's Server SDKs
 
 <p>As buckets are very similar to collections we have in the database, we have a similar permission model. Buckets support either bucket level permission or file level permission to allow different ways to manage access to your buckets and files. Check out the <a href="/docs/permissions">Permissions</a>  documentation to learn more about the permissions types available.</p>
 
-<h4>File Level Permissions</h4>
+<h4>File-Level Permissions</h4>
 <p>With this permission model, you have granular access control over every file, and users will only be able to access files for which they have explicit permissions. This permission model requires file permissions, and bucket permissions are optional.
 </p>
 
-<h4>Bucket Level Permissions</h4>
+<h4>Bucket-Level Permissions</h4>
 <p>With bucket-level permissions, you assign permissions once for every file in the buckets' settings - users with "read" access to the bucket can see all files in that bucket. This permission model requires you to set bucket permissions on the bucket settings page. File permissions are optional and will not be evaluated even when set.</p>
 
 <div class="notice margin-top-large margin-bottom-large">
@@ -64,9 +64,9 @@ You can manage your buckets programmatically using one of Appwrite's Server SDKs
 
 <h2><a href="/docs/storage#createFile" id="createFile">Create File</a></h2>
 
-<p>After you create a bucket or have navigated to bucket details, you can access the Files tab so you can upload, view, delete and update files in the bucket using the Appwrite project's dashboard. You can also perform all those operations from Appwrite's client SDK, server SDKs, and REST APIs as long as you have the proper permission.</p>
+<p>After you create a bucket or have navigated to bucket details, you can access the `Files` tab so you can upload, view, delete and update files in the bucket using the Appwrite project's dashboard. You can also perform all those operations from Appwrite's client SDK, server SDKs, and REST APIs as long as you have the proper permission.</p>
 
-<p>When you are in the files tab, you can click <b>Add File</b> and select a file to upload. If the bucket is configured to accept the file type and size you are uploading, your file will be uploaded, and you will see the file in the list of files.
+<p>When you are in the `Files` tab, you can click <b>Add File</b> and select a file to upload. If the bucket is configured to accept the file type and size you are uploading, your file will be uploaded, and you will see the file in the list of files.
 </p>
 
 <p>You can also upload files programmatically using our SDKs</p>
@@ -205,23 +205,23 @@ func main() {
     <tbody>
         <tr>
             <td>height</td>
-            <td>set the height of the output image in pixels, the image will be resized keeping the aspect ratio intact. Accepts integer between 0-4000</td>
+            <td>Set the height of the output image in pixels, the image will be resized keeping the aspect ratio intact. Accepts integer between 0-4000</td>
         </tr>
         <tr>
             <td>width</td>
-            <td> set the width of the output image in pixels, the image will be resized keeping the aspect ratio intact. Accepts integer between 0-4000</td>
+            <td>Set the width of the output image in pixels, the image will be resized keeping the aspect ratio intact. Accepts integer between 0-4000</td>
         </tr>
         <tr>
             <td>gravity</td>
-            <td> the gravity while cropping the image providing either width, height or both. Accepts any of: center, top-left, top, top-right, left, right, bottom-left, bottom, bottom-right</td>
+            <td>The gravity while cropping the image providing either width, height or both. Accepts any of: center, top-left, top, top-right, left, right, bottom-left, bottom, bottom-right</td>
         </tr>
         <tr>
             <td>quality</td>
-            <td> set the quality of the output image. Accepts integer between 0-100, where 100 is the highest quality.</td>
+            <td>Set the quality of the output image. Accepts integer between 0-100, where 100 is the highest quality.</td>
         </tr>
         <tr>
             <td>borderWidth</td>
-            <td> set a border with given width in pixels to the output image. Accepts integer between 0-100</td>
+            <td>Set a border with given width in pixels to the output image. Accepts integer between 0-100</td>
         </tr>
         <tr>
             <td>borderColor</td>
@@ -233,11 +233,11 @@ func main() {
         </tr>
         <tr>
             <td>opacity</td>
-            <td> set opacity for the output image. Accepts a float value between 0-1, where 0 makes it transparent. Only works with output format supporting alpha channel like png.</td>
+            <td>Set opacity for the output image. Accepts a float value between 0-1, where 0 makes it transparent. Only works with output format supporting alpha channel like png.</td>
         </tr>
         <tr>
             <td>rotation</td>
-            <td> rotate the output image by a degree. Accepts an integer between -360 to 360.</td>
+            <td>Rotate the output image by a degree. Accepts an integer between -360 to 360.</td>
         </tr>
         <tr>
             <td>background</td>
@@ -245,7 +245,7 @@ func main() {
         </tr>
         <tr>
             <td>output</td>
-            <td> set the output image format. If not provided, will use the original image's format. Supported formats are: jpg, jpeg, png, gif and webp</td>
+            <td>Set the output image format. If not provided, will use the original image's format. Supported formats are: jpg, jpeg, png, gif and webp</td>
         </tr>
     </tbody>
 </table>
@@ -253,4 +253,4 @@ func main() {
 
 <h2><a href="/docs/storage#streaming" id="streaming">Downloading and Streaming with Range</a></h2>
 
-<p>Apart from previewing files and images, downloading is another important feature. With 0.13 we also support streamed download using the HTTP range header. If you are using our SDKs or console, nothing is different. Even if you want to download the whole file at once, even if you use the REST endpoint directly, there isn't any difference. However, if you want to get only a part of a file from storage, you can supply the range header and the server will respond with an appropriate chunk of the file.</p>
+<p>Apart from previewing files and images, downloading is another important feature. With 0.13 we also support streamed download using the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Range" target="_blank">HTTP range header</a>. If you are using our SDKs or console, nothing is different. Even if you want to download the whole file at once, even if you use the REST endpoint directly, there isn't any difference. However, if you want to get only a part of a file from storage, you can supply the range header and the server will respond with an appropriate chunk of the file.</p>
