--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -42,19 +42,19 @@
     <tbody>
         <tr>
             <td>allowedFileExtensions</td>
-            <td>parameter allows you to provide a list of file extensions that will be accepted into the bucket.</td>
+            <td>This parameter allows you to provide a list of file extensions that will be accepted into the bucket.</td>
         </tr>
         <tr>
             <td>maximumFileSize</td>
-            <td> parameter allows you to set the maximum size of a file that a bucket accepts. The buckets will accept any file less than or equal to the size provided here.</td>
+            <td>This parameter allows you to set the maximum size of a file that a bucket accepts. The buckets will accept any file less than or equal to the size provided here.</td>
         </tr>
         <tr>
             <td>encryption</td>
-            <td> parameter allows you to configure whether or not the files inside the bucket will be encrypted.</td>
+            <td>This parameter allows you to configure whether or not the files inside the bucket will be encrypted. We don't encrypt files bigger than 20MB.</td>
         </tr>
         <tr>
             <td>antivirus</td>
-            <td> parameter allows you to configure whether or not the files being added inside the bucket be scanned by antivirus.</td>
+            <td>This parameter allows you to configure whether or not the files being added inside the bucket be scanned by antivirus. We don't scan files bigger than 20MB.</td>
         </tr>
     </tbody>
 </table>
