feat: update code

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -120,7 +120,7 @@ $errorCodes = $this->getParam('errorCodes', []);
 
 <h2><a href="/docs/functions#environmentVariables" id="environmentVariables">Error Codes</a></h2>
 
-<p>Appwrite also passes convenient error codes in addition to the http status code to help you get more fine grained control over what went wrong and allowing you to display relevant error messages.</p>
+<p>Appwrite also passes convenient error codes in addition to the http status codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages.</p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
