feat: address review comment

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -113,6 +113,7 @@ $errorCodes = $this->getParam('errors', []);
 <div class="ide">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>{
     "message": "Invalid id: Parameter must be a valid number",
+    "type": "argument_invalid",
     "code": 400
 }
 </code></pre>
