feat: update anchor link

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -119,7 +119,7 @@ $errorCodes = $this->getParam('errors', []);
 </code></pre>
 </div>
 
-<h2><a href="/docs/functions#environmentVariables" id="environmentVariables">Error Codes</a></h2>
+<h2><a href="/docs/error-codes#errorCodes" id="errorCodes">Error Codes</a></h2>
 
 <p>Appwrite also passes convenient error codes in addition to the http status codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages.</p>
 
