--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -119,7 +119,10 @@ $errorCodes = $this->getParam('errors', []);
 </code></pre>
 </div>
 
-<h2><a href="/docs/error-codes#errorCodes" id="errorCodes">Error Codes</a></h2>
+<div class="notice">
+    <h2><a href="/docs/error-codes#errorCodes" id="errorCodes">Error Codes</a></h2>
+    <p>Please note that error codes are only available since Appwrite 0.13.</p>
+</div>
 
 <p>Appwrite also passes convenient error codes in addition to the http status codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages.</p>
 
