feat: update column width

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -129,8 +129,8 @@ $errorCodes = $this->getParam('errors', []);
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
-            <th style="width: 200px">Code</th>
-            <th style="width: 120px">HTTP Status</th>
+            <th style="width: 200px">Type</th>
+            <th style="width: 100px">HTTP Status</th>
             <th>Description</th>
         </tr>
     </thead>
