feat: update column width

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -122,7 +122,7 @@ $errorCodes = $this->getParam('errors', []);
 <h2><a href="/docs/error-codes#errorCodes" id="errorCodes">Error Codes</a></h2>
 
 <div class="notice">
-    Please note that error codes are only available since Appwrite 0.13.
+    <p>Please note that custom error codes were introduced in Appwrite 0.13. </p>
 </div>
 
 <p>Appwrite also passes convenient error codes in addition to the http status codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages.</p>
