feat: update description

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -121,7 +121,7 @@ $errorTypes = $this->getParam('errors', []);
 
 <h2><a href="/docs/error-codes#errorTypes" id="errorTypes">Error Types</a></h2>
 
-<p>Appwrite also passes convenient error types in addition to the http status codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages in your applications.</p>
+<p> Appwrite also passes convenient error types in addition to the HTTP response codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages in your applications. Error types are are convenient to identify the type of error that occurred. For eg: A <span class="tag">400</span> HTTP response code could indicate a Bad Request due to a variety of reasons and error types can help you pinpoint the exact <span class="tag">400</span> error. The following error types are available:</p>
 
 <div class="notice">
     <p>Please note that error types were introduced in Appwrite 0.13. </p>
