feat: update column width

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -125,15 +125,11 @@ $errorTypes = $this->getParam('errors', []);
 
 <p> For eg: A <span class="tag">400</span> HTTP response code could indicate a Bad Request due to a variety of reasons and error types can help you pinpoint the exact <span class="tag">400</span> error. Appwrite currently supports the following error types:</p>
 
-<div class="notice">
-    <p>Please note that error types were introduced in Appwrite 0.13. </p>
-</div>
-
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
             <th style="width: 200px">Type</th>
-            <th style="width: 100px">HTTP Status</th>
+            <th style="width: 80px">Code</th>
             <th>Description</th>
         </tr>
     </thead>
