--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -109,7 +109,7 @@ $runtimes = $this->getParam('runtimes', []);
 };</code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>Adding dependencies to PHP requires you to have a composer.json file. </p>
+        <p>Adding dependencies to PHP requires you to have a composer.json file. The best practice is to make sure `vendor` folder is <b>not</b> part of your tarball. </p>
         <p>NOTE: Make sure to set the project name to "user/function" otherwise the build process will crash.</p>
     </div>
     </li>
