--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -97,7 +97,7 @@ $runtimes = $this->getParam('runtimes', []);
 }</code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>Installing dependencies is as simple as packaging a package.json in your tarball, Appwrite will handle the rest!</p>
+        <p>Installing dependencies is as simple as packaging a package.json in your tarball, Appwrite will handle the rest! The best practice is to make sure `node_modules` folder is <b>not</b> part of your tarball.</p>
         </div>
     </li>
     <li>
