Updated realtime event docs

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -5,7 +5,7 @@ $channels = [
     'collections.[ID]' => 'Any update/delete events to a given collection',
     'collections.[ID].documents' => 'Any create/update/delete events to any document in a collection',
     'documents' => 'Any create/update/delete events to any document',
-    'documents.[ID]' => 'Any update/delete events to a given document',
+    'collections.[ID].documents.[ID]' => 'Any update/delete events to a given document',
     'files' => 'Any create/update/delete events to any file',
     'files.[ID]' => 'Any update/delete events to a given file',
     'teams' => 'Any create/update/delete events to a any team',
