--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -7,7 +7,8 @@ $channels = [
     'documents' => 'Any create/update/delete events to any document',
     'documents.[ID]' => 'Any update/delete events to a given document',
     'files' => 'Any create/update/delete events to any file',
-    'files.[ID]' => 'Any update/delete events to a given file',
+    'bucckets.[ID].files.[ID]' => 'Any update/delete events to a given file of the given bucket',
+    'bucckets.[ID].files' => 'Any update/delete events to any file of the given bucket',
     'teams' => 'Any create/update/delete events to a any team',
     'teams.[ID]' => 'Any update/delete events to a given team',
     'memberships' => 'Any create/update/delete events to a any membership',
