--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -141,7 +141,7 @@ end </code></pre>
         <h3>Deno</h3>
         <div>
         <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno">
-            <pre class="line-numbers"><code class="prism language-typescript" data-prism>export default function(req: any, res: any) {
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>export default async function(req: any, res: any) {
     res.send("Hello World!")
 }</code></pre>
         </div>
