--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -84,7 +84,7 @@ $runtimes = $this->getParam('runtimes', []);
 <h3>Exporting your code functions correctly</h3>
 <p>When creating functions with Appwrite your code must export the function in certain ways depending on the language. This varies between languages so refer to the examples below.</p>
 <p>When your function is called you receive two parameters, `request` and `response`. The request contains all data that was sent to the function as well as other various environment variables. A schema of the request object can be found below and is the same for all runtimes.</p>
-<p>The response object will have two functions, <code>send()</code> and <code>json()</code> that can be used to send data back to the client. The types and implementation of these functions vary depending on runtime due to all languages being slightly different. You can check out implementation in specific language to learn more about them.</p>
+<p>The response object has two functions, <code>send()</code> and <code>json()</code> that can be used to send data back to the client. The types and implementation of these functions vary depending on runtime due to all languages being slightly different. You can check out implementation in the specific languages to learn more about them.</p>
 <p>An example of this for each language can be found below:</p>
 
 <ul class="phases clear" data-ui-phases>
