--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -134,7 +134,7 @@ $runtimes = $this->getParam('runtimes', []);
 end </code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>Simply package a Gemfile in your function, Appwrite will handle the rest!</p>
+        <p>Include a Gemfile in your function, Appwrite handles the rest!</p>
         </div>
     </li>
     <li>
