--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -146,7 +146,7 @@ end </code></pre>
 }</code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>No Special Steps are required for Deno, Appwrite will handle everything!</p>
+        <p>No Special Steps are required for Deno, Appwrite handles everything!</p>
         </div>
     </li>
     <li>
