--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -158,7 +158,7 @@ end </code></pre>
 }</code></pre>
         </div>
         <b>Installing Dependencies</b>
-        <p>Simply package a pubspec.yaml file in your function, Appwrite will handle the rest!</p>
+        <p>Include a pubspec.yaml file with your function, Appwrite handles the rest!</p>
         </div>
     </li>
     <li>
